--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,6 +43,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository_owner }}/multi-pattern-proxy:latest
             ghcr.io/${{ github.repository_owner }}/multi-pattern-proxy:${{ env.VERSION }}
